--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
                 <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
                 <p class="aprensentacao__conteudo__texto">Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
                 <div class="apresentacao__links">
-                <a class="apresentacao__links__link" href="https://instagram.com/heldjow">Instagram</a>
-                <a class="apresentacao__links__link" href="https://github.com/heldjow">Github</a>
+                    <h2>Acesse minhas redes:</h2>
+                    <a class="apresentacao__links__link" href="https://instagram.com/heldjow">Instagram</a>
+                    <a class="apresentacao__links__link" href="https://github.com/heldjow">Github</a>
                 </div>
             </section>
             <img src="Imagem.png" alt="Joana codando">
